--- a/index.html
+++ b/index.html
@@ -61,16 +61,20 @@
             <img src="./images/scissors.png" alt="scissors" />
           </div>
         </div>
-        <div class="choices">
-          <div class="player-choice">Resistance Chooses:</div>
-          <div class="term-choice">Terminator Chooses</div>
+        <div class="main-body" id="main-body">
+          <div class="choices">
+            <div class="player-choice" id="player-choice">
+              Resistance Chooses:
+            </div>
+            <div class="term-choice" id="term-choice">Terminator Chooses</div>
+          </div>
+          <div class="winner" id="winner"></div>
+          <ul class="score" id="score">
+            <li>SCORE</li>
+            <li id="pscore">Resistance: 0</li>
+            <li id="cscore">Terminator: 0</li>
+          </ul>
         </div>
-        <div class="winner" id="winner"></div>
-        <ul class="score" id="score">
-          <li>SCORE</li>
-          <li id="pscore">Resistance: 0</li>
-          <li id="cscore">Terminator: 0</li>
-        </ul>
         <div class="victor" id="victor">First to 5: Make Another Selection</div>
       </div>
     </main>
