--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
               After millenia of temporal bickering, Sarah and the Terminators
               have agreed that this is going nowhere (nowhen?). A bargain has
               been struck. The final outcome of their epic contest will rest
-              upon that most ancient and noble form of combat... ROCK, PAPER,
-              SCISSORS! You have been chosen to represent humanity in this final
-              battle. Choose wisely... <br />Our fate is in your hands
-              (literally).
+              upon that most ancient and noble form of combat... <br />ROCK,
+              PAPER, SCISSORS! You have been chosen to represent humanity in
+              this final battle. Choose wisely... <br />Our fate is in your
+              hands (literally).
             </p>
           </div>
         </div>
@@ -75,7 +75,9 @@
             <li id="cscore">Terminator: 0</li>
           </ul>
         </div>
-        <div class="victor" id="victor">First to 5: Make Another Selection</div>
+        <div class="victor" id="victor">
+          First To 5 Wins: Click Icon To Make A Selection
+        </div>
       </div>
     </main>
     <script src="script.js"></script>
