added hover, active states and changed some colors

--- a/index.html
+++ b/index.html
@@ -63,10 +63,16 @@
         </div>
         <div class="main-body" id="main-body">
           <div class="choices">
+            <img src="./images/sarah.png" alt="" width="60" id="sarah-avatar" />
+            <span>Chooses: </span>
             <div class="player-choice" id="player-choice">
-              Resistance Chooses:
+              <em>click icon</em>
             </div>
-            <div class="term-choice" id="term-choice">Terminator Chooses</div>
+            <img src="./images/t2.png" alt="" width="60" id="term-avatar" />
+            <span>Chooses: </span>
+            <div class="term-choice" id="term-choice">
+              <em>click icon</em>
+            </div>
           </div>
           <div class="winner" id="winner"></div>
           <ul class="score" id="score">
