--- a/index.html
+++ b/index.html
@@ -63,15 +63,24 @@
         </div>
         <div class="main-body" id="main-body">
           <div class="choices">
-            <img src="./images/sarah.png" alt="" width="60" id="sarah-avatar" />
-            <span>Chooses: </span>
-            <div class="player-choice" id="player-choice">
-              <em>click icon</em>
+            <div class="choice-mobile">
+              <img
+                src="./images/sarah.png"
+                alt=""
+                width="60"
+                id="sarah-avatar"
+              />
+              <span>Chooses: </span>
+              <div class="player-choice" id="player-choice">
+                <em>click icon</em>
+              </div>
             </div>
-            <img src="./images/t2.png" alt="" width="60" id="term-avatar" />
-            <span>Chooses: </span>
-            <div class="term-choice" id="term-choice">
-              <em>click icon</em>
+            <div class="choice-mobile">
+              <img src="./images/t2.png" alt="" width="60" id="term-avatar" />
+              <span>Chooses: </span>
+              <div class="term-choice" id="term-choice">
+                <em>click icon</em>
+              </div>
             </div>
           </div>
           <div class="winner" id="winner"></div>
