--- a/index.html
+++ b/index.html
@@ -95,6 +95,44 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="footer-contact">
+        <div class="footer-contact-title">CONTACT:</div>
+        <div class="footer-contact-links">
+          <a href="mailto:amalfimakesit@gmail.com">email</a>
+          <a href="http://www.linkedin.com/in/steve-corwin-amalfitano-79345698/"
+            >LinkedIn</a
+          >
+          <a href="https://www.facebook.com/AmalfiMakesIt/">Store</a>
+        </div>
+      </div>
+      <div class="footer-center">
+        <div class="footer-social">
+          <a href="https://www.facebook.com/AmalfiMakesIt"
+            ><i class="fab fa-facebook fa-1x"></i
+          ></a>
+
+          <a href="https://www.instagram.com/amalfi.makes.it/"
+            ><i class="fab fa-instagram fa-1x"></i
+          ></a>
+          <a href="https://github.com/PrinceCorwin"
+            ><i class="fab fa-github fa-1x"></i
+          ></a>
+          <a href="https://www.youtube.com/c/TribeOfOne"
+            ><i class="fab fa-youtube fa-1x"></i
+          ></a>
+        </div>
+        <div class="copyright">
+          <small>&copy; Copyright 2020, Steve Corwin Amalfitano</small>
+        </div>
+      </div>
+      <div class="footer-logo">
+        <a href="https://amalfimakesit.com/">
+          <img src="images/AmalfiMakesItWebDev.svg" alt="Amalfi Makes It logo"
+        /></a>
+      </div>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
