--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Rock, Paper, Scissors: Judgement Day</title>
+    <title>RPS: JUDGEMENT DAY</title>
     <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
     <link
       rel="apple-touch-icon"
@@ -24,6 +24,21 @@
     <link rel="manifest" href="https://amalfimakesit.com/site.webmanifest" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- social media display meta tags -->
+    <meta property="og:title" content="ROCK PAPER SCISSORS: JUDGEMENT DAY!" />
+    <meta
+      property="og:description"
+      content="Help Sarah defeat the Terminator in this classic game"
+    />
+    <meta
+      property="og:image"
+      content="https://amalfimakesit.com/images/RPSpreview.png"
+    />
+    <meta
+      property="og:url"
+      content="https://amalfimakesit.com/apps/rock-paper-scissors"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <script
       src="https://kit.fontawesome.com/6c80d95586.js"
       crossorigin="anonymous"
