chng dir of soc med meta tag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:image"
-      content="https://amalfimakesit.com/images/RPSpreview.png"
+      content="https://amalfimakesit.com/images/SocMedThumbnails/RPSpreview.png"
     />
     <meta
       property="og:url"
