changed textContent to innerHTML

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </head>
   <body>
     <nav>
-      <div class="app-title">ROCK, PAPER, SCISSORS: JUDGEMENT DAY!</div>
+      <div class="app-title">R.P.S: JUDGEMENT DAY!</div>
       <div id="rules-btn">RULES</div>
       <div id="rules">
         <div id="rules-title">
@@ -111,7 +111,7 @@
               </div>
               <div class="score">
                 <div>Terminator:</div>
-                <span id="cscore">0</span>
+                <div id="cscore">0</div>
               </div>
             </div>
           </div>
